crates/math-core/tests/snapshots/error_test__double_sub.snap
---
source: crates/math-core/tests/error_test.rs
expression: x__3
---
Error: '^' or '_' directly followed by '^', '_' or prime.
   ╭─[ <input>:1:3 ]
   │
 1 │ x__3
   │   ┬  
   │   ╰── unexpected bound
───╯
